org_moved_to_kermeta2_git/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/VariableDecl/VariableDecl_type_mismatch_001/project.kp
resource library_standard ="platform:/plugin/org.kermeta.language.library.standard" alternative "mvn:org.kermeta.language/language.library.standard/2.0.99-SNAPSHOT"
importProject library_standard
project VariableDecl_type_mismatch_001 {
	import "${project.baseUri}/001_VariableDecl.kmt"
}
